styles.css
@namespace html "http://www.w3.org/1999/xhtml";

/* region UTILS */

:root {
    --pane-width: 100%;
    --pane-min-width: 664px;
    --main-content-padding-x: 28px;
    --button-margin: 4px;
    --icon-size: 16px;
    --icon-padding: 8px;
    --texfield-padding-x: 10px;
    --texfield-padding-y: 5px;
    --textfield-border-radius: 2px;
    --main-content-y-padding: 40px;
    --table-border: 1px;
    --table-border-radius: 2px;
    /*TODO: change these to photon colors?*/
    --table-border-col: #c1c1c1;
    --table-header-col: #808080;

    --table-width: calc(var(--pane-width) - 2 * var(--table-border) - 2 * var(--button-margin));
    --icon-col-width: calc(var(--icon-size) + 2 * var(--icon-padding) + 2 * var(--button-margin) - 2 * var(--texfield-padding-x));
    --remaining-col-width: calc(0.5 * (var(--table-width) - 3 * var(--icon-col-width) - 10 * var(--texfield-padding-x)));
}

.spacer {
    height: 5px;
}

.line {
    /* TODO: use flex-line-breaks? */
    width: 100%;
    display: flex;
    flex-direction: row;
}

.line > .growth {
    flex-grow: 1;
}

/* endregion */

/* region ICONS */
.icon {
    height: var(--icon-size);
    width: var(--icon-size);
    background: no-repeat center;
    background-size: var(--icon-size) var(--icon-size);
    flex-shrink: 0;
}

span.icon {
    float: left;
    /* TODO I don't know why this is necessary*/
}

.icon.icon--dropdown {
    background-image: url("chrome://global/skin/icons/arrow-dropdown-16.svg");
}

.icon.icon--star {
    background-image: url("chrome://browser/skin/bookmark-hollow.svg");
}

.icon.icon--filled-star {
    background-image: url("chrome://browser/skin/bookmark.svg");
}

.icon.icon--search {
    /*TODO: not sure which one I should use here...*/
    background-image: url("chrome://browser/skin/preferences/in-content/search.svg");
}

.icon.icon--add {
    /*TODO: not sure which one I should use here...*/
    background-image: url("https://hg.mozilla.org/mozilla-central/raw-file/tip/devtools/client/themes/images/add.svg");
}

.icon.icon--lock {
    background-image: url("chrome://browser/skin/preferences/in-content/privacy-security.svg");
}

.icon.icon--copy {
    background-image: url("chrome://browser/skin/edit-copy.svg");
}

.icon.icon--reset {
    background-image: url("chrome://browser/skin/undo.svg");
}

.icon.icon--trash {
    /*probably browser/components/newtab/data/content/assets/glyph-delete-16.svg; but no chrome:// link for that one*/
    background-image: url("https://hg.mozilla.org/mozilla-central/raw-file/tip/browser/components/newtab/data/content/assets/glyph-delete-16.svg");
}

.icon.icon--save {
    /*chrome://global/skin/icons/check.svg does not work (Win 10)*/
    background-image: url("https://hg.mozilla.org/mozilla-central/raw-file/tip/toolkit/themes/shared/icons/check.svg");
}

.icon.icon--toggle {
    background-image: url("chrome://browser/skin/developer.svg");
}

/* endregion */

/* region CONTAINER */
.container {
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    position: fixed;
}

.navigation {
    overflow-x: hidden;
    overflow-y: auto;
    flex-shrink: 0;
}

.main-content {
    flex-grow: 1; /* such that the scrollbar is on the right border ;)*/
    overflow-y: auto;
}

.pane-container {
    width: var(--pane-width);
    min-width: var(--pane-min-width);
    display: flex;
    flex-direction: column;
    height: 100%;
}

/* endregion */

/* region NAVIGATION */
#categories > .category.category--small {
    display: flex;
    flex-direction: row;
    align-self: center;
    min-height: 24px;
}

.category__label {
    padding-left: var(--icon-padding);
    text-overflow: ellipsis;
    overflow: hidden;
    flex-shrink: 1;
}

#categories > .category.category--small.category--spacer {
    margin-top: var(--texfield-padding-y);
    margin-bottom: var(--texfield-padding-y);
    border-top: 1px solid var(--table-border-col);
    height: 0;
    min-height: 0;
}

/* endregion*/

/* region STICKY */
.tricky-hide {
    /*TODO: this is an ugly trick...*/
    position: fixed;
    top: 0;
    left: 0;
    height: var(--main-content-y-padding);
    width: calc(var(--pane-width) - var(--main-content-padding-x)); /* such that it does not conceal the scroll bar*/
    background-color: var(--in-content-page-background);
    z-index: 1;
}

.sticky-container {
    position: sticky;
    top: 0;
    background-color: var(--in-content-page-background);
    z-index: 2;
}

/* region search */
.search-container {
    display: flex;
    flex-direction: row;
}

.search-box {
    flex: 1 0 auto;
    display: flex;
    align-self: center;
}

html|input[type="text"].search-box__input {
    margin-left: calc(var(--button-margin) - var(--icon-size));
    margin-right: var(--button-margin);
    padding-left: calc(var(--texfield-padding-x) + var(--icon-padding) + var(--icon-size));
    flex-grow: 1;
}

.icon.icon--search.icon--in-search {
    margin: 0;
    align-self: center;
    position: relative;
    left: var(--texfield-padding-x);
    transform: scaleX(-1);

    -moz-context-properties: fill; /* TODO: find solution without -moz ? */
    fill: var(--grey-40);
}

.search-select {
    margin: var(--button-margin);
    padding-right: var(--texfield-padding-x);
    display: flex;
    flex-direction: row;
}

.search-select:last-child {
    padding-right: 0;
}

.search-select input[type="checkbox"] {
    align-self: center;
    margin-right: var(--button-margin);
}

.search-select label {
    align-self: center;
}

/* endregion */

/* region add */
.add-container {
    /*TODO: design that!*/
    padding: var(--texfield-padding-y) 0 var(--texfield-padding-y) var(--button-margin);
    margin-bottom: calc(2 * var(--texfield-padding-y));
}

.add-container__caption {
    /* inspired by about:preferences */
    -moz-appearance: none;
    font-size: 1.14em;
    margin: 0;
    padding: 4px var(--button-margin);
    font-weight: 600;
    line-height: 1.4em;
}

.add-container__button {
    color: var(--blue-50);
    cursor: pointer;
    -moz-context-properties: fill;
    fill: currentColor;
    border: none;
    margin: 0;
    padding: 0 45px 0 0;
    font: inherit;
    position: relative;
}

.add-container__button::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-image: url("chrome://global/skin/icons/arrow-dropdown-16.svg");
    background-repeat: no-repeat;
    background-size: 20px;
    background-position: right center;
}

.add-container__button.add-container__button--expanded::after {
    transform: scaleY(-1);
}

html|button.add-container__button:hover {
    background-color: transparent;
}

html|button.add-container__button:active {
    background-color: transparent;
}

html|button.add-container__button:hover:active {
    background-color: transparent;
}

#add-container__inner {
    /*display: flex;*/
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-evenly;
    /*TODO: button position if on single line?!*/
}

#add-container__inner input[type="text"] {
    flex-grow: 1;
}

.add-container__type {
    flex-shrink: 0;
    margin: var(--button-margin);
}

/* endregion */
/* endregion */

/* region TABLE */
/* region basics */
.pref-table {
    width: var(--table-width);
    display: grid;
    align-items: stretch; /* center */
    /*todo: stretch for odd-even-colouring, but then the text is not centered => inner flex box?*/
    grid-template-columns: auto 1fr 1fr auto auto;

    border: var(--table-border) solid var(--in-content-box-border-color);
    background-color: var(--in-content-box-background);
    margin: 0 var(--button-margin);
}

.pref-table.pref-table--header {
    border-radius: var(--table-border-radius) var(--table-border-radius) 0 0;
    color: var(--table-header-col);
    margin-bottom: 0;
}

.pref-table.pref-table--body {
    border-top: none;
    border-radius: 0 0 var(--table-border-radius) var(--table-border-radius);
    margin-top: 0;
}

.pref-table__cell:not(.pref-table--header):nth-child(10n+1),
.pref-table__cell:not(.pref-table--header):nth-child(10n+2),
.pref-table__cell:not(.pref-table--header):nth-child(10n+3),
.pref-table__cell:not(.pref-table--header):nth-child(10n+4),
.pref-table__cell:not(.pref-table--header):nth-child(10n+5) {
    background: var(--grey-20);
}

.pref-table__cell {
    /*padding: var(--texfield-padding-y) var(--texfield-padding-x);*/
    /*todo review padding*/
}

/* endregion */

/* region header */
.pref-table .pref-table__head-cell {
    display: table-cell;
    text-align: left;
    border: none;
    background-color: var(--in-content-box-background-hover);
    padding: var(--texfield-padding-y) var(--texfield-padding-x);
    border-bottom: var(--table-border) solid;
    border-image: linear-gradient(transparent 0%, transparent 20%, var(--table-border-col) 20%,
    var(--table-border-col) 80%, transparent 80%, transparent 97%, var(--table-border-col) 97%, var(--table-border-col) 100%) 1 1;
}

.pref-table .pref-table__head-cell:not(:first-child) {
    display: table-cell;
    padding-left: calc(var(--texfield-padding-x) - var(--table-border));
    border-left: var(--table-border) solid;
}

.pref-table .pref-table__head-cell:hover {
    background-color: var(--in-content-box-background-active);
    color: var(--in-content-text-color);
}

/* endregion */

/* region edit&blocked */
.pref-table__cell.pref-table__cell--in-edit {
    padding: 0;
}

.pref-table__cell.pref-table__cell--in-edit .hacky-thing {
    display: flex;
    align-self: center;
}

.pref-table__cell.pref-table__cell--in-edit input[type="text"] {
    flex-grow: 1;
}

.pref-table__cell--disabled {
    opacity: 0.4;
    /*TODO affects background, too =(*/
}

.pref-table__cell--edited {
    font-weight: bold;
}

.edit {
    width: 100%;
}

.pref-table__cell.pref-table__cell--button-cell {
    padding: 0;
}

button.button.button--ghost.icon--save {
    background-color: var(--grey-90-a10);
}

button.button.button--small {
    min-width: 66px;
}

/* endregion */
/* endregion */

/* region EDIT */
.edit-flex {
    display: inline-flex;
    width: 100%;
    border: none;
    border-radius: var(--textfield-border-radius);
    overflow: hidden;
}

html|input[type="text"].edit-box {
    flex: 1;
    border-radius: 0;
}

html|button.edit-save {
    margin: 0;
    min-width: 0;
    border-radius: 0;
    border-left: none;
}

/* endregion*/

/* region COLLAPSED -- @media (max-width: 830px) */
@media (max-width: 830px) {
    #categories > .category.category--small {
        /* TODO design*/
        margin-left: 5px;
        margin-right: 10px;
        padding-left: 5px;
        padding-right: 5px;
    }
}

/* endregion */

